tests/stage2/t3_diagnostics/type_errors/interface_not_satisfied.fuse
// EXPECTED ERROR:
// does not implement interface

fn show<T: Printable>(x: T) {
  println(x)
}

data class Opaque(val x: Int)

@entrypoint
fn main() {
  show(Opaque(1))
}
